--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -4,7 +4,7 @@
     margin: auto;
     /* overflow: hidden; */
     border-radius: 30px;
-    height: 500px;
+    height: 280px;
 }
 
 .ProductsBackgroundImagesContainer::before {
@@ -47,6 +47,8 @@
 .ImageOverContentContainer>div {
     max-width: 800px;
     margin: auto;
+  margin-top: 2.5rem;
+    /* height: 400px; */
 }
 
 
