Updated api code with offline issurance

--- a/src/components/layout/HeaderFooter.css
+++ b/src/components/layout/HeaderFooter.css
@@ -27,6 +27,11 @@
     padding: 4rem 0rem;
 }
 
+.LargetextFooter {
+    font-size: 20px;
+    color: white !important;
+}
+
 @media (max-width: 768px) {
     #FooterContent {
         padding: 3rem 1rem;
